--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,11 @@ python-dateutil>=2.8.2
 pytest>=7.4.0
 cryptography>=41.0.0
 mypy>=1.5.0
+openai>=1.12.0
+anthropic>=0.8.0
+flask>=2.2.0
+flask-cors>=3.0.10
+prometheus-client>=0.16.0
+opentelemetry-api>=1.14.0
+opentelemetry-sdk>=1.14.0
+opentelemetry-exporter-prometheus>=1.14.0
